# homeprot

./: .gitignore  .~lock.Protocol.ods#  CMakeLists.txt  Protocol.ods  README.md
include/homeprot/: bus.h  frame.h  homeprot.h  layer2.h  subsystem.h
src/bus/: byteReceived.cpp  registerByteReceived.cpp
src/homeprot/: homeprot.cpp
src/layer2/: byteReceived.cpp  layer2.cpp
src/subsystem/: subsystem.cpp
tests/: CMakeLists.txt
tests/include/: dummyBus.h  dummySubsystem.h
tests/src/: sanity.cpp
tests/src/dummySubsystem.cpp/: dummySubsystem.cpp
tests/src/implementations/dummyBus/: receiveByte.cpp  sendByte.cpp
tests/src/tests/bus/: t_bus.cpp  t_byteReceived.cpp  t_registerByteReceived.cpp
tests/src/tests/frame/: t_applyCRC.cpp  t_calcCRC.cpp  t_validateCRC.cpp
